ajustes nos links da tela inicial e de informações gerais

--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
             <div class="col-md-12">
                 <div class="row justify-content-between">
                     <div class="col-lg-3 col-md-6 text-center">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/smartphone_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -153,7 +153,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/api_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -163,7 +163,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/engineering_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -173,7 +173,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/lock_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="row justify-content-between">
                     <div class="col-lg-3 col-md-6">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/developer_board_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -195,7 +195,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/memory_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -205,7 +205,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/database_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -215,7 +215,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/groups_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-6">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/terminal_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -237,7 +237,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5" href="#">
+                        <a style="min-height: 180px" class="texto-area py-4 px-2 mb-5">
                             <div class="img-prof text-center">
                                 <img style="width: 30%;" class="img-fluid mb-3" src="assets/engineering_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                             </div>
@@ -251,148 +251,7 @@
         </div>
     </div>
 
-
-<div id="professors">
-    <div class="container mb-1 pb-5" style="border-bottom: 2px solid #0D0E36">
-        <div class="text-center pb-5">
-            <h4 class="titulo_area">Corpo Docente</h4>
-        </div>
-        <div class="row justify-content-between">
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/5640399839698012 " class="prof py-3">
-                    <div class="img-prof text-center">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/alvaro2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        Álvaro Cesar
-                    </div>
-                    <div class="subtitulo-prof">
-                        Doutorado
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/6513070331492998 " class="prof py-3">
-                    <div class="img-prof">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/daliton2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        Daliton Silva
-                    </div>
-                    <div class="subtitulo-prof">
-                        Mestrado
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/3151296501932443 " class="prof py-3">
-                    <div class="img-prof">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/dimas2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        Dimas Nascimento
-                    </div>
-                    <div class="subtitulo-prof">
-                        Doutorado
-                    </div>
-                </a>
-            </div>
-        </div>
-
-        <div class="row justify-content-between">
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/7448139435512224 " class="prof py-3">
-                    <div class="img-prof">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/igor2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        Igor Vanderlei
-                    </div>
-                    <div class="subtitulo-prof">
-                        Doutorado
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/2498961747789618  " class="prof py-3">
-                    <div class="img-prof">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/jean2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        Jean Araújo
-                    </div>
-                    <div class="subtitulo-prof">
-                        Doutorado
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/4494150663121260 " class="prof py-3">
-                    <div class="img-prof">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/joao2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        João Gomes
-                    </div>
-                    <div class="subtitulo-prof">
-                        Doutorado
-                    </div>
-                </a>
-            </div>
-        </div>
-
-        <div class="row justify-content-between">
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/3111765717865989 " class="prof py-3">
-                    <div class="img-prof">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/mariel2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        Mariel Andrade
-                    </div>
-                    <div class="subtitulo-prof">
-                        Doutorado
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/3150254272678008 " class="prof py-3">
-                    <div class="img-prof">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/rodrigoA2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        Rodrigo Andrade
-                    </div>
-                    <div class="subtitulo-prof">
-                        Doutorado
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 my-2 text-center">
-                <a href="http://lattes.cnpq.br/4654692334430085 " class="prof py-3">
-                    <div class="img-prof">
-                        <img style="width: 65%; border-radius: 100%" class="img-fluid mb-3" src="assets/rodrigoR2.png" alt="">
-                    </div>
-                    <div class="titulo-prof">
-                        Rodrigo Rocha
-                    </div>
-                    <div class="subtitulo-prof">
-                        Doutorado
-                    </div>
-                </a>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<!-- CORPO DOCENTE -->
+<!-- AREAS DE ATUAÇAO -->
 
 <!-- FOOTER -->
 
