--- a/info.html
+++ b/info.html
@@ -97,7 +97,7 @@
                     em sua pesquisa.
                 </p>
             </div>
-            <div class="col-lg-6 pt-3">
+            <div class="col-lg-6 pt-5">
                 <p style="font-weight: 700" class="texto mx-2">
                     Para realizar o curso, espera-se dos estudantes a dedicação de 8 horas diárias
                     (40h semanais) organizadas da seguinte forma:
@@ -134,7 +134,7 @@
         </div>
         <div class="row justify-content-between">
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/api_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Engenharia de Software Aplicada</strong>
@@ -145,7 +145,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/groups_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Ética, Sociedade e Inovação Tecnológica</strong>
@@ -156,7 +156,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/manage_history_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Gestão Ágil de Projetos de Software</strong>
@@ -167,7 +167,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/computer_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Desenvolvimento de Aplicações Web</strong>
@@ -178,7 +178,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/face_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Design e Experiência do Usuário</strong>
@@ -189,7 +189,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/precision_manufacturing_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Fábrica de Software I</strong>
@@ -206,7 +206,7 @@
         </div>
         <div class="row justify-content-between">
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/smartphone_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Desenvolvimento de Aplicações Mobile</strong>
@@ -217,7 +217,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/engineering_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Testes Sistemáticos e Qualidade de Software</strong>
@@ -228,7 +228,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/developer_board_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>DevOps e Conteinerização</strong>
@@ -239,7 +239,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/database_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Engenharia de Dados</strong>
@@ -250,7 +250,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/precision_manufacturing_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Fábrica de Software II</strong>
@@ -261,7 +261,7 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-4 text-center">
-                <a style="min-height: 220px" class="disciplina py-3">
+                <a style="min-height: 220px" class="disciplina py-3" href="#">
                     <img class="pb-3" src="assets/edit_document_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     <p class="mb-1 text mx-1">
                         <strong>Trabalho de Conclusão de Curso</strong>
