--- a/home.html
+++ b/home.html
@@ -21,11 +21,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between px-0 mx-0" id="navbarNav" style="border-bottom: 2px solid #0D0E36">
-                <!--<a class="nav-link float-right ps-0" aria-current="page" href="http://ufape.edu.br/">UFAPE</a>
-                //<a class="nav-link float-right" aria-current="page" href="https://www.ifsertao-pe.edu.br/index.php/campus/serra-talhada">IFPE-Serra Talhada</a>
-                //<a class="nav-link float-right" aria-current="page" href="https://www.omnilink.com.br/">Omnilink</a> -->
                 <a class="nav-link float-right pe-0" aria-current="page" href="home.html">Página Inicial</a>
                 <a class="nav-link float-right pe-0" aria-current="page" href="info.html">Informações Gerais</a>
+                <a class="nav-link float-right pe-0" aria-current="page" href="edital.html">Edital</a>
                 <a class="nav-link float-right pe-0" aria-current="page" href="#">Inscreva-se</a>
                 <a class="nav-link float-right" aria-current="page" href="contato.html">Contato</a>
             </div>
