base para a tela de edital

--- a/edital.html
+++ b/edital.html
@@ -35,7 +35,32 @@
 
 <!-- CONTEUDO -->
 
+<div id="edital">
 
+  <div class="container py-5" style="border-bottom: 2px solid #0D0E36">
+    <div class="row justify-content-between">
+      <div class="col-md-5" style="border-right: 2px solid #0D0E36; min-height: 280px">
+        <div class="pb-3 titulo">
+          Documentos
+        </div>
+      </div>
+
+      <div class="col-md-7 ps-4">
+        <div class="pb-3 titulo">
+          Edital
+        </div>
+        <div class="">
+          Este programa é fruto de uma parceria entre docentes da Universidade Federal do
+          Agreste de Pernambuco, do Instituto Federal do Sertão Pernambucano - Campus de
+          Serra Talhada e da empresa Omnilink Tecnologia, e conta também com o apoio da Fundação
+          de Amparo à Ciência e Tecnologia do Estado de Pernambuco (FACEP).
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
 
 <!-- CONTEUDO -->
 
