página de contato

--- a/contato.html
+++ b/contato.html
@@ -1,10 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/main.css">
+
+    <title>Residência em Software</title>
 </head>
 <body>
+
+<!-- NAVBAR -->
+
+<div id="header">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light pt-3">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between px-0 mx-0" id="navbarNav" style="border-bottom: 2px solid #0D0E36">
+                <a class="nav-link float-right pe-0" aria-current="page" href="home.html">Página Inicial</a>
+                <a class="nav-link float-right pe-0" aria-current="page" href="info.html">Informações Gerais</a>
+                <a class="nav-link float-right pe-0" aria-current="page" href="edital.html">Edital</a>
+                <a class="nav-link float-right pe-0" aria-current="page" href="#">Inscreva-se</a>
+                <a class="nav-link float-right" aria-current="page" href="contato.html">Contato</a>
+            </div>
+        </nav>
+    </div>
+</div>
+
+<!-- NAVBAR -->
+
+<!-- CONTEUDO -->
+
+<div id="contato">
+
+    <div class="container py-5" style="border-bottom: 2px solid #0D0E36">
+        <div class="row justify-content-between">
+            <div class="col-md-5" style="border-right: 2px solid #0D0E36; min-height: 280px">
+                <div class="pb-3 titulo">
+                    Contato
+                </div>
+                <div class="texto pe-3">
+                    Qualquer duvida sobre o processo seletivo, entrar em contato com a coordenação
+                    pelas vias da universidade.
+                </div>
+                <div class="row pt-3">
+                    <div class="col-md-2 ">
+                        <img style="width: 70%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/mail_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                    </div>
+                    <div style="text-align: left;" class="col-md-6 mx-0 pe-4 ps-0">
+                        email@email.com
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 ">
+                        <img style="width: 70%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/pin_drop_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                    </div>
+                    <div style="text-align: left;" class="col-md-7 mx-0 pe-4 ps-0">
+                        Av. Bom Pastor, s/n - Boa Vista, Garanhuns - PE, 55292-270
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-7 ps-4">
+                <div class="pb-3 titulo text-center">
+                    <a href="https://www.google.com/maps/place/UFAPE+-+Universidade+Federal+do+Agreste+de+Pernambuco/@-8.9067588,-36.4943075,15z/data=!4m5!3m4!1s0x0:0x9e8a2fd11fab3580!8m2!3d-8.9067588!4d-36.4943075">
+                        <img style="width: 70%" src="assets/mapa.png" alt="">
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<!-- CONTEUDO -->
+
+<!-- FOOTER -->
+
+<footer id="rodape">
+    <div class="container">
+        <div class="row justify-content-between py-2">
+            <div class="col-md-6 text-center mt-2">
+                Instituições de Ensino
+                <div class="mt-4">
+                    <img style="width: 8%" class="img-fluid mb-3 mx-3" src="assets/layer1.svg" alt="">
+                    <img style="width: 15%" class="img-fluid mb-3 mx-3" src="assets/4d3ee7ba-c865-4bd5-87fd-0e51fa19fbda.png" alt="">
+                    <img style="width: 30%" class="img-fluid mb-3 mx-3" src="assets/logo_facepe.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-6 text-center mt-2">
+                Instituições Parceiras
+                <div class="">
+                    <img style="width: 25%" class="img-fluid mb-3 mx-2" src="assets/layer1%20(cópia%201).svg" alt="">
+                    <img style="width: 15%" class="img-fluid mb-3 mx-2" src="assets/Grupo%201151.svg" alt="">
+                    <img style="width: 35%" class="img-fluid mb-3 mx-2" src="assets/logo_omnilink_700_prancheta.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
