--- a/edital.html
+++ b/edital.html
@@ -49,7 +49,7 @@
         <div class="pb-3 titulo">
           Edital
         </div>
-        <div class="">
+        <div class="texto">
           Este programa é fruto de uma parceria entre docentes da Universidade Federal do
           Agreste de Pernambuco, do Instituto Federal do Sertão Pernambucano - Campus de
           Serra Talhada e da empresa Omnilink Tecnologia, e conta também com o apoio da Fundação
