Mudança no nome do arquivo de 'home' para 'index'

--- a/edital.html
+++ b/edital.html
@@ -21,7 +21,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between px-0 mx-0" id="navbarNav" style="border-bottom: 2px solid #0D0E36">
-        <a class="nav-link float-right pe-0" aria-current="page" href="home.html">Página Inicial</a>
+        <a class="nav-link float-right pe-0" aria-current="page" href="index.html">Página Inicial</a>
         <a class="nav-link float-right pe-0" aria-current="page" href="info.html">Informações Gerais</a>
         <a class="nav-link float-right pe-0" aria-current="page" href="edital.html">Edital</a>
         <a class="nav-link float-right pe-0" aria-current="page" href="#">Inscreva-se</a>
