--- a/edital.html
+++ b/edital.html
@@ -24,7 +24,7 @@
         <a class="nav-link float-right pe-0" aria-current="page" href="index.html">Página Inicial</a>
         <a class="nav-link float-right pe-0" aria-current="page" href="info.html">Informações Gerais</a>
         <a class="nav-link float-right pe-0" aria-current="page" href="edital.html">Edital</a>
-        <a class="nav-link float-right pe-0" aria-current="page" href="#">Inscreva-se</a>
+        <a class="nav-link float-right pe-0" aria-current="page" href="https://forms.gle/aEE41P5MVCSHNhLj7">Inscreva-se</a>
         <a class="nav-link float-right" aria-current="page" href="contato.html">Contato</a>
       </div>
     </nav>
