--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             Este programa é fruto de uma parceria entre docentes da Universidade Federal do
             Agreste de Pernambuco, do Instituto Federal do Sertão Pernambucano - Campus de
             Serra Talhada e da empresa Omnilink Tecnologia, e conta também com o apoio da Fundação
-            de Amparo à Ciência e Tecnologia do Estado de Pernambuco (FACEP).
+            de Amparo à Ciência e Tecnologia do Estado de Pernambuco (FACEPE).
         </div>
         <div class="py-5 text-center">
             <button type="button" class="btn-lg btn-outline-primary">Inscreva-se</button>
