--- a/contato.html
+++ b/contato.html
@@ -45,14 +45,14 @@
                 </div>
                 <div class="texto pe-3">
                     Qualquer duvida sobre o processo seletivo, entrar em contato com a coordenação
-                    pelas vias da universidade.
+                    por email.
                 </div>
                 <div class="row pt-3">
                     <div class="col-md-2 ">
                         <img style="width: 70%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/mail_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     </div>
                     <div style="text-align: left;" class="col-md-6 mx-0 pe-4 ps-0">
-                        email@email.com
+                        residencia.software@ufape.edu.br
                     </div>
                 </div>
                 <div class="row">
