--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             de Amparo à Ciência e Tecnologia do Estado de Pernambuco (FACEPE).
         </div>
         <div class="py-5 text-center">
-            <button type="button" class="btn-lg btn-outline-primary">Inscreva-se</button>
+            <button type="button" class="btn-lg btn-outline-primary" href="https://forms.gle/aEE41P5MVCSHNhLj7" target="_blank">Inscreva-se</a></button> 
         </div>
     </div>
 </div>
