deixa como button pra n mudar o css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             de Amparo à Ciência e Tecnologia do Estado de Pernambuco (FACEPE).
         </div>
         <div class="py-5 text-center">
-            <a class="btn-lg btn-outline-primary" href="https://forms.gle/aEE41P5MVCSHNhLj7" target="_blank">Inscreva-se</a>
+            <button type="button" class="btn-lg btn-outline-primary" onclick=" window.open('https://forms.gle/aEE41P5MVCSHNhLj7','_blank')" target="_blank">Inscreva-se</button>
         </div>
     </div>
 </div>
