--- a/edital.html
+++ b/edital.html
@@ -42,6 +42,9 @@
       <div class="col-md-5" style="border-right: 2px solid #0D0E36; min-height: 280px">
         <div class="pb-3 titulo">
           Documentos
+          <a href="" TARGET="_blank" title="Projeto do Curso">Projeto do Curso</a>
+          <a href="" TARGET="_blank" title="Edital Seleção">Edital Seleção</a>
+          
         </div>
       </div>
 
