--- a/edital.html
+++ b/edital.html
@@ -42,10 +42,10 @@
       <div class="col-md-5" style="border-right: 2px solid #0D0E36; min-height: 280px">
         <div class="pb-3 titulo">
           Documentos
-          <a href="" TARGET="_blank" title="Projeto do Curso">Projeto do Curso</a>
-          <a href="" TARGET="_blank" title="Edital Seleção">Edital Seleção</a>
-          
         </div>
+        	<p><a href="docs/edital.pdf" TARGET="_blank" title="Edital Seleção">Edital Seleção</a></p>
+		<p><a href="docs/projeto-residencia-facepe-resumida.pdf" TARGET="_blank" title="Projeto do Curso">Projeto do Curso</a></p>
+
       </div>
 
       <div class="col-md-7 ps-4">
