--- a/info.html
+++ b/info.html
@@ -285,7 +285,7 @@
         </div>
         <div class="row justify-content-between">
             <div class="col-lg-6 col-md-12 my-2">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/5640399839698012" class="prof py-4">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/5640399839698012" TARGET="_blank" class="prof py-4">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
                             <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/alvaro2.png" alt="">
@@ -303,17 +303,17 @@
             </div>
 
             <div class="col-lg-6 col-md-12 my-2">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/6513070331492998" class="prof py-4">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/6577405976489740" TARGET="_blank" class="prof py-4">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
-                            <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/daliton2.png" alt="">
+                            <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/icaro.jpg" alt="">
                         </div>
                         <div style="text-align: left" class="col-md-6 mx-0 pe-4 ps-0">
                             <p style="font-size: 1.1rem" class="titulo-prof">
-                                Daliton Silva - Mestrado
+                                Ícaro Lins Leitão da Cunha - Doutorado
                             </p>
                             <p class="subtitulo-prof">
-                                Desenvolvimento de Software Mobile / Computação Gráfica (Ciência da Computação)
+                               Desenvolvimento de Software Mobile / Computação Gráfica / Desenvolvimento de Jogos
                             </p>
                         </div>
                     </div>
@@ -324,7 +324,7 @@
 
         <div class="row justify-content-between">
             <div class="col-lg-6 col-md-12 my-2 text-center">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/3151296501932443 " class="prof py-3">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/3151296501932443" TARGET="_blank" class="prof py-3">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
                             <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/dimas2.png" alt="">
@@ -342,7 +342,7 @@
             </div>
 
             <div class="col-lg-6 col-md-12 my-2 text-center">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/7448139435512224 " class="prof py-3">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/7448139435512224" TARGET="_blank" class="prof py-3">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
                             <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/igor2.png" alt="">
@@ -364,7 +364,7 @@
 
         <div class="row justify-content-between">
             <div class="col-lg-6 col-md-12 my-2 text-center">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/2498961747789618  " class="prof py-3">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/2498961747789618" TARGET="_blank" class="prof py-3">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
                             <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/jean2.png" alt="">
@@ -384,7 +384,7 @@
             </div>
 
             <div class="col-lg-6 col-md-12 my-2 text-center">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/4494150663121260 " class="prof py-3">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/4494150663121260" TARGET="_blank" class="prof py-3">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
                             <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/joao2.png" alt="">
@@ -405,7 +405,7 @@
 
         <div class="row justify-content-between">
             <div class="col-lg-6 col-md-12 my-2 text-center">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/3111765717865989 " class="prof py-3">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/3111765717865989" TARGET="_blank" class="prof py-3">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
                             <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/mariel2.png" alt="">
@@ -424,7 +424,7 @@
             </div>
 
             <div class="col-lg-6 col-md-12 my-2 text-center">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/3150254272678008 " class="prof py-3">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/3150254272678008" TARGET="_blank" class="prof py-3">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
                             <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/rodrigoA2.png" alt="">
@@ -446,7 +446,7 @@
 
         <div class="row justify-content-between">
             <div class="col-lg-6 col-md-12 my-2 text-center">
-                <a style="min-height: 260px;" href="http://lattes.cnpq.br/4654692334430085 " class="prof py-3">
+                <a style="min-height: 260px;" href="http://lattes.cnpq.br/4654692334430085" TARGET="_blank" class="prof py-3">
                     <div class="row pt-3">
                         <div class="col-md-6 mx-0 px-0">
                             <img style="width: 50%; border-radius: 100%; text-align: left; vertical-align: middle" class="img-fluid mb-3" src="assets/rodrigoR2.png" alt="">
