--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <div id="inicio">
     <div class="container py-5" style="border-bottom: 2px solid #0D0E36">
         <div class="text-center pt-5 mx-4 titulo">
-            Residência em Software
-            BCC - UFAPE/Omnlink
+        	Residência em Software 
+		<p>UFAPE / Omnlink</p>
         </div>
         <div class="pt-3 text-center mx-5 px-1 texto">
             Este programa é fruto de uma parceria entre docentes da Universidade Federal do
