css profs+andersona

--- a/edital.html
+++ b/edital.html
@@ -56,7 +56,7 @@
           Este programa é fruto de uma parceria entre docentes da Universidade Federal do
           Agreste de Pernambuco, do Instituto Federal do Sertão Pernambucano - Campus de
           Serra Talhada e da empresa Omnilink Tecnologia, e conta também com o apoio da Fundação
-          de Amparo à Ciência e Tecnologia do Estado de Pernambuco (FACEP).
+          de Amparo à Ciência e Tecnologia do Estado de Pernambuco (FACEPE).
         </div>
       </div>
 
